# atrex-bench

./: .dockerignore  .gitignore  NOTICE  README.md  pyproject.toml
configs/hardware/: XPU-A.yaml  XPU-B.yaml
data/: README.md  operator_importance.json
data/attention_forward/: input.py  metadata.json  reference.py  roofline.json  shapes.json
data/block_scaled_mm/: input.py  metadata.json  reference.py  roofline.json  shapes.json
data/causal_conv1d/: input.py  metadata.json  reference.py  roofline.json  shapes.json
data/chunk_delta_rule_output/: input.py  metadata.json  reference.py  roofline.json  shapes.json
data/chunk_gated_delta_rule_state/: input.py  metadata.json  reference.py  roofline.json  shapes.json
data/fp8_blockscale_fused_moe/: input.py  metadata.json  reference.py  roofline.json  shapes.json
data/fp8_dynamic_per_token_quant/: input.py  metadata.json  reference.py  roofline.json  shapes.json
data/fused_add_rms_norm/: input.py  shapes.json  (+3 more)
docker/: Dockerfile.cuda  Dockerfile.rocm  build.sh
scripts/: check_compile.py  check_correctness.py  cleanup_for_generation.py  estimate.py  estimate_flops.py  refresh_all_roofline.sh  roofline.py  run_eval.py  run_generate.py  view_trace.py
site/: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
tests/: test_cleanup_for_generation.py  test_eval_compile.py  test_eval_correctness.py  test_eval_estimate.py  test_eval_flops.py  test_eval_flydsl_tracker.py  test_eval_kernel_attribution.py  test_eval_performance.py  test_generate.py  test_run_eval.py  test_run_generate.py
(+163 files in other folders)
