[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atrex-bench"
version = "0.1.0"
description = "Atrex-Bench: End-to-end benchmark for kernel generation across multiple DSLs (Triton/Gluon/FlyDSL/CuteDSL)"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch>=2.1.0",
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
gpu = [
    "triton",
]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["atrex_bench*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
